--- a/src/components/FormRegistration/styles.scss
+++ b/src/components/FormRegistration/styles.scss
@@ -35,6 +35,12 @@
                     border: 1px solid rgba(0, 0, 0, 0.527);
                     border-radius: 0.25rem;
                 }
+
+                .alert-message {
+                    color: red;
+                    font-style: italic;
+                    font-size: 0.75rem;
+                }
             }
 
             button {
